// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`newTotal > should create total with alias 1`] = `
{
  "alias": "My Total",
  "attributeIdentifier": "a_label.account.id",
  "measureIdentifier": "m_afSEwRwdbMeQ",
  "type": "sum",
}
`;

exports[`newTotal > should create total with measure and attr ids 1`] = `
{
  "attributeIdentifier": "attrLocalId",
  "measureIdentifier": "measureLocalId",
  "type": "sum",
}
`;

exports[`newTotal > should create total with measure and attr objects 1`] = `
{
  "attributeIdentifier": "a_label.account.id",
  "measureIdentifier": "m_afSEwRwdbMeQ",
  "type": "sum",
}
`;

exports[`newTotal > should create total with mix of object and ids 1`] = `
{
  "attributeIdentifier": "attrLocalId",
  "measureIdentifier": "m_afSEwRwdbMeQ",
  "type": "sum",
}
`;
